re-tweaked folder structure. More clean and by category during the class will be the folder for such files. Expanding. Onto variables video.

--- a/index.html
+++ b/index.html
@@ -30,5 +30,6 @@
       </ol>
     </div>
     <script src="./JS-Files/index.js"></script>
+    <script src="./JS-Files/Primitive-Data.js"></script>
   </body>
 </html>
