went thru variables, constants and assignment definitions on the browser console.

--- a/Basic-Syntax/index.html
+++ b/Basic-Syntax/index.html
@@ -8,5 +8,6 @@
   <body>
     <h1>Basic JavaScript Syntax</h1>
     <script src="Primitive-Data.js"></script>
+    <script src="Variables-Constants-Assignments.js"></script>
   </body>
 </html>
