--- a/Basic-Syntax/index.html
+++ b/Basic-Syntax/index.html
@@ -9,5 +9,6 @@
     <h1>Basic JavaScript Syntax</h1>
     <script src="Primitive-Data.js"></script>
     <script src="Variables-Constants-Assignments.js"></script>
+    <script src="Arithmetic-Operators-Assignments.js"></script>
   </body>
 </html>
