polymorphism sketch knocked out. assignment operators starting to make a lot more sense.

--- a/Basic-Syntax/index.html
+++ b/Basic-Syntax/index.html
@@ -10,5 +10,6 @@
     <script src="Primitive-Data.js"></script>
     <script src="Variables-Constants-Assignments.js"></script>
     <script src="Arithmetic-Operators-Assignments.js"></script>
+    <script src="Assignment-Operators.js"></script>
   </body>
 </html>
