--- a/Basic-Syntax/index.html
+++ b/Basic-Syntax/index.html
@@ -11,5 +11,6 @@
     <script src="Variables-Constants-Assignments.js"></script>
     <script src="Arithmetic-Operators-Assignments.js"></script>
     <script src="Assignment-Operators.js"></script>
+    <script src="Debugging.js"></script>
   </body>
 </html>
