--- a/Basic-Syntax/index.html
+++ b/Basic-Syntax/index.html
@@ -7,10 +7,14 @@
   </head>
   <body>
     <h1>Basic JavaScript Syntax</h1>
+    <p>Click the button for a greeting depending on the time of day!</p>
+    <button onclick="greetingFunction()">Click Me</button>
+    <p id="time-demo" className="time-demo"></p>
     <script src="Primitive-Data.js"></script>
     <script src="Variables-Constants-Assignments.js"></script>
     <script src="Arithmetic-Operators-Assignments.js"></script>
     <script src="Assignment-Operators.js"></script>
     <script src="Debugging.js"></script>
+    <script src="FunctionsOrSubroutines.js"></script>
   </body>
 </html>
