added js file and added html script tag src.

--- a/Basic-Syntax/index.html
+++ b/Basic-Syntax/index.html
@@ -18,5 +18,6 @@
     <script src="Assignment-Operators.js"></script>
     <script src="Debugging.js"></script>
     <script src="FunctionsOrSubroutines.js"></script>
+    <script src="Objects-Arrays.js"></script>
   </body>
 </html>
