first commit made and fiel set up. reviewing objects and arrays before embedding

--- a/Basic-Syntax/index.html
+++ b/Basic-Syntax/index.html
@@ -19,5 +19,6 @@
     <script src="Debugging.js"></script>
     <script src="FunctionsOrSubroutines.js"></script>
     <script src="Objects-Arrays.js"></script>
+    <script src="Embedding-Objects-Arrays.js"></script>
   </body>
 </html>
