file setup and project file set up. Ready to work out my brain

--- a/Basic-Syntax/index.html
+++ b/Basic-Syntax/index.html
@@ -10,7 +10,7 @@
     <p>Click the button for a greeting depending on the time of day!</p>
     <button onclick="greetingFunction()">Click Me</button>
     <p id="time-demo" className="time-demo"></p>
-    <p id="array-demo"></p>
+    <!-- <p id="array-demo"></p> -->
 
     <script src="Primitive-Data.js"></script>
     <script src="Variables-Constants-Assignments.js"></script>
