--- a/Basic-Syntax/index.html
+++ b/Basic-Syntax/index.html
@@ -20,5 +20,6 @@
     <script src="FunctionsOrSubroutines.js"></script>
     <script src="Objects-Arrays.js"></script>
     <script src="Embedding-Objects-Arrays.js"></script>
+    <script src="Callable-Objects.js"></script>
   </body>
 </html>
