set up index html script src for MemoryHoisting javascript file. Wrote a callable object function to get the mind working

--- a/Basic-Syntax/index.html
+++ b/Basic-Syntax/index.html
@@ -21,5 +21,6 @@
     <script src="Objects-Arrays.js"></script>
     <script src="Embedding-Objects-Arrays.js"></script>
     <script src="Callable-Objects.js"></script>
+    <script src="Memory-Hoisting.js"></script>
   </body>
 </html>
