--- a/Basic-Syntax/index.html
+++ b/Basic-Syntax/index.html
@@ -22,5 +22,6 @@
     <script src="Embedding-Objects-Arrays.js"></script>
     <script src="Callable-Objects.js"></script>
     <script src="Memory-Hoisting.js"></script>
+    <script src="Scopes-Closures.js"></script>
   </body>
 </html>
