this.js file added to basic syntax and script tag added to index.html. scoped function is loading in the browswer.

--- a/Basic-Syntax/index.html
+++ b/Basic-Syntax/index.html
@@ -23,5 +23,6 @@
     <script src="Callable-Objects.js"></script>
     <script src="Memory-Hoisting.js"></script>
     <script src="Scopes-Closures.js"></script>
+    <script src="This.js"></script>
   </body>
 </html>
