tweaked comparison operator page. now building final if else for condition file to solidify my understanding of this logic.

--- a/Comparison-Conditional-Execution/index.html
+++ b/Comparison-Conditional-Execution/index.html
@@ -8,6 +8,6 @@
   <body>
     <h1>Comparison and Conditional Operators</h1>
     <script src="Comparison.js"></script>
-    <script src="Conditional.js"></script>
+    <script src="Condition.js"></script>
   </body>
 </html>
