created for-loopin file. for some loopins

--- a/Comparison-Conditional-Execution/index.html
+++ b/Comparison-Conditional-Execution/index.html
@@ -9,5 +9,6 @@
     <h1>Comparison and Conditional Operators</h1>
     <script src="Comparison.js"></script>
     <script src="Condition.js"></script>
+    <script src="For-Loopin.js"></script>
   </body>
 </html>
