created let.js file. this was mainly explanation of const let and var and what they do in javascript. ES6 syntax.

--- a/Comparison-Conditional-Execution/index.html
+++ b/Comparison-Conditional-Execution/index.html
@@ -10,5 +10,6 @@
     <script src="Comparison.js"></script>
     <script src="Condition.js"></script>
     <script src="For-Loopin.js"></script>
+    <script src="Let.js"></script>
   </body>
 </html>
