--- a/DOM-Manipulation/index.html
+++ b/DOM-Manipulation/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
   </head>
   <body>
+    <h1>Document Object Model</h1>
     <script src="Document-Object-Model.js"></script>
   </body>
 </html>
