--- a/DOM-Manipulation/index.html
+++ b/DOM-Manipulation/index.html
@@ -7,6 +7,12 @@
   </head>
   <body>
     <h1>Document Object Model</h1>
+    <p id="silly">Manipulating Elements</p>
+    <ul class="list">
+      <li class="item-one">One</li>
+      <li class="item-two">Two</li>
+      <li class="item-three">Three</li>
+    </ul>
     <script src="Document-Object-Model.js"></script>
   </body>
 </html>
