styling styles and styles on styling. feeling good about styling and better about working with elements on the DOM.

--- a/DOM-Manipulation/index.html
+++ b/DOM-Manipulation/index.html
@@ -8,11 +8,12 @@
   <body>
     <h1>Document Object Model</h1>
     <p id="silly">Manipulating Elements</p>
-    <ul class="list">
-      <li class="item-one">One</li>
-      <li class="item-two">Two</li>
-      <li class="item-three">Three</li>
+    <ul id="list">
+      <li class="item one">One</li>
+      <li class="item two">Two</li>
+      <li class="item three">Three</li>
     </ul>
+
     <script src="Document-Object-Model.js"></script>
   </body>
 </html>
