--- a/DOM-Manipulation/index.html
+++ b/DOM-Manipulation/index.html
@@ -13,7 +13,13 @@
       <li class="item two">Two</li>
       <li class="item three">Three</li>
     </ul>
-
+    <select name="cars" id="">
+      <option value="toyota">Toyota</option>
+      <option value="ford">Ford</option>
+      <option value="chevy">Chevy</option>
+      <option value="bmw">BMW</option></select
+    >
     <script src="Document-Object-Model.js"></script>
+    <script src="Event-Handler.js"></script>
   </body>
 </html>
