--- a/Final/index.html
+++ b/Final/index.html
@@ -6,6 +6,26 @@
     <title>Document</title>
   </head>
   <body>
+    <select id="background">
+      <option value="Green">Green</option>
+      <option value="Yellow">Yellow</option>
+      <option value="Red">Red</option>
+    </select>
+    <select id="width">
+      <option value="100px">100px</option>
+      <option value="200px">200px</option>
+      <option value="300px">300px</option>
+    </select>
+    <select id="height">
+      <option value="100px">100px</option>
+      <option value="200px">200px</option>
+      <option value="300px">300px</option>
+    </select>
+    <button id="set">Set</button>
+    <div
+      id="modify"
+      style="width: 300px; height: 300px; background: blue;"
+    ></div>
     <script src="Final-Project.js"></script>
   </body>
 </html>
